# magic-mania

./: Cargo.toml
assets/: bat.aseprite  blast.aseprite  mage.aseprite
src/: mage.rs  main.rs
