[package]
name = "magic-mania"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
leafwing-input-manager = "0.11.2"

[profile.dev.package."*"]
opt-level = 3
